tests/rosetta/out/C/arithmetic-derivative.error
cc: exit status 1
/tmp/arithmetic-derivative.c: In function ‘mochi_main’:
/tmp/arithmetic-derivative.c:158:19: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  158 |       line = line + pad(vals.data[i + j]);
      |                   ^ ~~~~~~~~~~~~~~~~~~~~~
      |                     |
      |                     char *
/tmp/arithmetic-derivative.c:179:23: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  179 |     char *res = tmp23 + repeat("0", m - 1);
      |                       ^ ~~~~~~~~~~~~~~~~~~
      |                         |
      |                         char *
